# CSE-Tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GUI_IMPROVEMENTS.md  LICENSE  MODERN_UI_GUIDE.md  Makefile  README.md  capture_screenshots.py  config.yaml  main.py  main_gui.py  pyproject.toml  requirements.txt  verify_core_logic.py
gui/: __init__.py  main_window.py  styles.py
gui/tabs/: __init__.py  breakeven_tab.py  complete_analysis_tab.py  fees_tab.py  fundamental_tab.py  history_tab.py  technical_tab.py
gui/widgets/: __init__.py
src/: __init__.py
src/analysis/: __init__.py  recommendations.py
src/calculations/: __init__.py  breakeven.py  fundamental.py  technical.py
src/export/: csv_export.py  pdf_report.py
src/fees/: __init__.py  cse_fees.py
src/storage/: database.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: conftest.py  test_breakeven.py  test_database.py  test_export.py  test_fees.py  test_fundamental.py  test_helpers.py  test_integration.py  test_recommendations.py  test_technical.py
